@@ -8,5 +8,5 @@ if (!empty($GLOBALS['HTTP_GET_VARS']["GALLERY_BASEDIR"]) ||
        	exit;
 }
 
-include "$GALLERY_BASEDIR/html_wrap/inline_imagewrap.inc";
+include "${GALLERY_BASEDIR}html_wrap/inline_imagewrap.inc";
 ?>
