@@ -1,3 +1,15 @@
+2003-10-03 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b122
+
+	* Fixed bug in offline slideshow.  Identical to 1.3.5-cvs-b18 bug.
+
+	* Removed more warnings.
+
+	* Replaced $GALLERY_BASEDIR/ with ${GALLERY_BASEDIR}
+
+	* Update capture date when refreshing EXIF data.
+
+	* Removed stray pixel from TR.gif for polaroids.
+
 2003-10-02  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b121
 
 	* Fixed validation errors in view_album.php and view_photo.php.
